fixed a bug of python script for perf summary and improved perf notebook

--- a/tests/perf-profile/perf-measurement-template.ipynb
+++ b/tests/perf-profile/perf-measurement-template.ipynb
@@ -62,6 +62,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mem_unit = mem_stat['mem_unit'].unique()[0]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -76,7 +85,8 @@
    },
    "outputs": [],
    "source": [
-    "mem_stat.plot(x='elapsed_time',y=['mem_used','buf_cache','avail_mem'],figsize=(10,5))"
+    "fig = mem_stat.plot(x='elapsed_time',y=['mem_used','buf_cache','avail_mem'],figsize=(10,5))\n",
+    "fig.set_ylabel('Memory usage (%s)' % mem_unit)"
    ]
   },
   {
@@ -92,7 +102,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "proc_stat.pivot_table(index='elapsed_time',values=['res','virt'],aggfunc=sum).plot(figsize=(10,5))"
+    "fig = proc_stat.pivot_table(index='elapsed_time',values=['res','virt'],aggfunc=sum).plot(figsize=(10,5))\n",
+    "fig.set_ylabel('Memory usage (MiB)')"
    ]
   },
   {
@@ -112,7 +123,8 @@
    },
    "outputs": [],
    "source": [
-    "proc_stat.pivot_table(index='elapsed_time',columns=['proc'],values=['res'],aggfunc=sum).plot(figsize=(10,5))"
+    "fig = proc_stat.pivot_table(index='elapsed_time',columns=['proc'],values=['res'],aggfunc=sum).plot(figsize=(10,5))\n",
+    "fig.set_ylabel('Memory usage (MiB)')"
    ]
   },
   {
@@ -235,7 +247,8 @@
    },
    "outputs": [],
    "source": [
-    "nfs_stat[nfs_stat['fs-path']=='/mp/nas1'].pivot_table(index='time',values=['read-kb/s','write-kb/s']).plot(alpha=0.5,figsize=(10,5))"
+    "fig = nfs_stat[nfs_stat['fs-path']=='/mp/nas1'].pivot_table(index='time',values=['read-kb/s','write-kb/s']).plot(alpha=0.5,figsize=(10,5))\n",
+    "fig.set_ylabel('read/write (kb/s)')"
    ]
   },
   {
@@ -260,7 +273,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nfs_stat[nfs_stat['fs-path']=='/mp/nas1'].pivot_table(index='time',values=['pages-in-readpages','pages-in-writepages']).plot(alpha=0.5,figsize=(10,5))"
+    "fig = nfs_stat[nfs_stat['fs-path']=='/mp/nas1'].pivot_table(index='time',values=['pages-in-readpages','pages-in-writepages']).plot(alpha=0.5,figsize=(10,5))\n",
+    "fig.set_ylabel('pages')"
    ]
   },
   {
