--- a/tests/perf-profile/perf-measurement-template.ipynb
+++ b/tests/perf-profile/perf-measurement-template.ipynb
@@ -4,15 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Performance measurement in ExSeqProcessing (ver.1.6)"
+    "# Performance measurement in ExSeqProcessing (ver.1.7)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -23,6 +21,7 @@
     "import os\n",
     "import subprocess\n",
     "import re\n",
+    "from datetime import datetime, timedelta\n",
     "from IPython.display import display\n",
     "\n",
     "pd.set_option('float_format', '{:f}'.format)"
@@ -38,9 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "proc_stat = pd.read_csv('summary-top-proc-status.csv',parse_dates=[0])\n",
@@ -50,15 +47,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "proc_stat['elapsed_time'] = pd.to_timedelta(proc_stat['elapsed_time'])\n",
+    "proc_stat['elapsed_time_m'] = proc_stat['elapsed_time'] / timedelta(minutes=1)\n",
     "proc_stat['proc'] = proc_stat['proc'].str.rstrip()\n",
     "\n",
-    "mem_stat['elapsed_time'] = pd.to_timedelta(mem_stat['elapsed_time'])"
+    "mem_stat['elapsed_time'] = pd.to_timedelta(mem_stat['elapsed_time'])\n",
+    "mem_stat['elapsed_time_m'] = mem_stat['elapsed_time'] / timedelta(minutes=1)"
    ]
   },
   {
@@ -85,7 +82,8 @@
    },
    "outputs": [],
    "source": [
-    "fig = mem_stat.plot(x='elapsed_time',y=['mem_used','buf_cache','avail_mem'],figsize=(10,5))\n",
+    "fig = mem_stat.plot(x='elapsed_time_m',y=['mem_used','buf_cache','avail_mem'],figsize=(10,5))\n",
+    "fig.set_xlabel('Elapsed time (min)')\n",
     "fig.set_ylabel('Memory usage (%s)' % mem_unit)"
    ]
   },
@@ -102,7 +100,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = proc_stat.pivot_table(index='elapsed_time',values=['res','virt'],aggfunc=sum).plot(figsize=(10,5))\n",
+    "fig = proc_stat.pivot_table(index='elapsed_time_m',values=['res','virt'],aggfunc=sum).plot(figsize=(10,5))\n",
+    "fig.set_xlabel('Elapsed time (min)')\n",
     "fig.set_ylabel('Memory usage (MiB)')"
    ]
   },
@@ -118,13 +117,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "fig = proc_stat.pivot_table(index='elapsed_time',columns=['proc'],values=['res'],aggfunc=sum).plot(figsize=(10,5))\n",
+    "fig = proc_stat.pivot_table(index='elapsed_time_m',columns=['proc'],values=['res'],aggfunc=sum).plot(figsize=(10,5))\n",
+    "fig.set_xlabel('Elapsed time (min)')\n",
     "fig.set_ylabel('Memory usage (MiB)')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tbl = proc_stat[proc_stat['proc'] == 'worker'].pivot_table(index='elapsed_time_m',columns=['pid'],values=['res'],aggfunc=sum)\n",
+    "tbl[tbl.isna()] = 0\n",
+    "fig = tbl.plot(figsize=(10,5))\n",
+    "fig.set_xlabel('Elapsed time (min)')\n",
+    "fig.set_ylabel('Memory usage (MiB)')\n",
+    "fig.legend(loc='upper left',bbox_to_anchor=(1.02,0.5,0.5,0.5),ncol=2,borderaxespad=0.1)"
    ]
   },
   {
@@ -142,17 +154,19 @@
    },
    "outputs": [],
    "source": [
-    "proc_usage = proc_stat.pivot_table(index='elapsed_time',values=['cpu'],aggfunc=sum)\n",
+    "proc_usage = proc_stat.pivot_table(index='elapsed_time_m',values=['cpu'],aggfunc=sum)\n",
     "fig = proc_usage.plot(alpha=0.5,figsize=(10,5))\n",
     "proc_usage.rolling(window=12,center=True).mean().plot(ax=fig)\n",
     "fig.set_title('CPU usage of all MATLAB processes')\n",
+    "fig.set_xlabel('Elapsed time (min)')\n",
     "fig.set_ylabel('CPU usage (%)')\n",
     "fig.legend(['cpu','SMA cpu'])\n",
     "\n",
-    "proc_usage = proc_stat.pivot_table(index='elapsed_time',values=['mem'],aggfunc=sum)\n",
+    "proc_usage = proc_stat.pivot_table(index='elapsed_time_m',values=['mem'],aggfunc=sum)\n",
     "fig = proc_usage.plot(alpha=0.5,figsize=(10,5))\n",
     "proc_usage.rolling(window=12,center=True).mean().plot(ax=fig)\n",
     "fig.set_title('Memory usage of all MATLAB processes')\n",
+    "fig.set_xlabel('Elapsed time (min)')\n",
     "fig.set_ylabel('Memory usage (%)')\n",
     "fig.legend(['mem','SMA mem'])"
    ]
@@ -165,31 +179,35 @@
    },
    "outputs": [],
    "source": [
-    "proc_usage_worker = proc_stat[proc_stat['proc'] == 'worker'].pivot_table(index='elapsed_time',values=['cpu'],aggfunc=sum)\n",
+    "proc_usage_worker = proc_stat[proc_stat['proc'] == 'worker'].pivot_table(index='elapsed_time_m',values=['cpu'],aggfunc=sum)\n",
     "fig = proc_usage_worker.plot(y=['cpu'],alpha=0.5,figsize=(10,5))\n",
     "proc_usage_worker.rolling(window=12,center=True).mean().plot(ax=fig)\n",
     "fig.set_title('CPU usage of MATLAB worker processes')\n",
+    "fig.set_xlabel('Elapsed time (min)')\n",
     "fig.set_ylabel('CPU usage (%)')\n",
     "fig.legend(['cpu','SMA cpu'])\n",
     "\n",
-    "proc_usage_main = proc_stat[proc_stat['proc'] == 'main'].pivot_table(index='elapsed_time',values=['cpu'],aggfunc=sum)\n",
+    "proc_usage_main = proc_stat[proc_stat['proc'] == 'main'].pivot_table(index='elapsed_time_m',values=['cpu'],aggfunc=sum)\n",
     "fig = proc_usage_main.plot(y=['cpu'],alpha=0.5,figsize=(10,5))\n",
     "proc_usage_main.rolling(window=12,center=True).mean().plot(ax=fig)\n",
     "fig.set_title('CPU usage of MATLAB main process')\n",
+    "fig.set_xlabel('Elapsed time (min)')\n",
     "fig.set_ylabel('CPU usage (%)')\n",
     "fig.legend(['cpu','SMA cpu'])\n",
     "\n",
-    "proc_usage_worker = proc_stat[proc_stat['proc'] == 'worker'].pivot_table(index='elapsed_time',values=['mem'],aggfunc=sum)\n",
+    "proc_usage_worker = proc_stat[proc_stat['proc'] == 'worker'].pivot_table(index='elapsed_time_m',values=['mem'],aggfunc=sum)\n",
     "fig = proc_usage_worker.plot(y=['mem'],alpha=0.5,figsize=(10,5))\n",
     "proc_usage_worker.rolling(window=12,center=True).mean().plot(ax=fig)\n",
     "fig.set_title('Memory usage of MATLAB worker processes')\n",
+    "fig.set_xlabel('Elapsed time (min)')\n",
     "fig.set_ylabel('Memory usage (%)')\n",
     "fig.legend(['mem','SMA mem'])\n",
     "\n",
-    "proc_usage_main = proc_stat[proc_stat['proc'] == 'main'].pivot_table(index='elapsed_time',values=['mem'],aggfunc=sum)\n",
+    "proc_usage_main = proc_stat[proc_stat['proc'] == 'main'].pivot_table(index='elapsed_time_m',values=['mem'],aggfunc=sum)\n",
     "fig = proc_usage_main.plot(y=['mem'],alpha=0.5,figsize=(10,5))\n",
     "proc_usage_main.rolling(window=12,center=True).mean().plot(ax=fig)\n",
     "fig.set_title('Memory usage of MATLAB main process')\n",
+    "fig.set_xlabel('Elapsed time (min)')\n",
     "fig.set_ylabel('Memory usage (%)')\n",
     "fig.legend(['mem','SMA mem'])"
    ]
@@ -213,9 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "nfs_stat = pd.read_csv('summary-nfsiostat.csv',parse_dates=[0])"
@@ -224,12 +240,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "nfs_stat['time'] = pd.to_timedelta(nfs_stat['time'])"
+    "nfs_stat['time'] = pd.to_timedelta(nfs_stat['time'])\n",
+    "nfs_stat['time_m'] = nfs_stat['time'] / timedelta(minutes=1)"
    ]
   },
   {
@@ -247,7 +262,8 @@
    },
    "outputs": [],
    "source": [
-    "fig = nfs_stat[nfs_stat['fs-path']=='/mp/nas1'].pivot_table(index='time',values=['read-kb/s','write-kb/s']).plot(alpha=0.5,figsize=(10,5))\n",
+    "fig = nfs_stat[nfs_stat['fs-path']=='/mp/nas1'].pivot_table(index='time_m',values=['read-kb/s','write-kb/s']).plot(alpha=0.5,figsize=(10,5))\n",
+    "fig.set_xlabel('Elapsed time (min)')\n",
     "fig.set_ylabel('read/write (kb/s)')"
    ]
   },
@@ -273,7 +289,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = nfs_stat[nfs_stat['fs-path']=='/mp/nas1'].pivot_table(index='time',values=['pages-in-readpages','pages-in-writepages']).plot(alpha=0.5,figsize=(10,5))\n",
+    "fig = nfs_stat[nfs_stat['fs-path']=='/mp/nas1'].pivot_table(index='time_m',values=['pages-in-readpages','pages-in-writepages']).plot(alpha=0.5,figsize=(10,5))\n",
+    "fig.set_xlabel('Elapsed time (min)')\n",
     "fig.set_ylabel('pages')"
    ]
   },
@@ -287,9 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "vm_stat = pd.read_csv('summary-vmstat.csv',parse_dates=[0])"
@@ -298,12 +313,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "vm_stat['time'] = pd.to_timedelta(vm_stat['time'])"
+    "vm_stat['time'] = pd.to_timedelta(vm_stat['time'])\n",
+    "vm_stat['time_m'] = vm_stat['time'] / timedelta(minutes=1)"
    ]
   },
   {
@@ -321,9 +335,10 @@
    },
    "outputs": [],
    "source": [
-    "vm_bio = vm_stat.pivot_table(index='time',values=['io-bi','io-bo'])\n",
+    "vm_bio = vm_stat.pivot_table(index='time_m',values=['io-bi','io-bo'])\n",
     "fig = vm_bio.plot(alpha=0.5,figsize=(10,5))\n",
     "vm_bio.rolling(window=12,center=True).mean().plot(ax=fig)\n",
+    "fig.set_xlabel('Elapsed time (min)')\n",
     "fig.set_ylabel('blocks/s')\n",
     "fig.legend(['io-bi','io-bo','SMA io-bi','SMA io-bo'])"
    ]
@@ -352,7 +367,8 @@
    },
    "outputs": [],
    "source": [
-    "fig = vm_stat.pivot_table(index='time',values=['cpu-us','cpu-sy','cpu-id','cpu-wa','cpu-st']).plot(alpha=0.5,figsize=(10,5))\n",
+    "fig = vm_stat.pivot_table(index='time_m',values=['cpu-us','cpu-sy','cpu-id','cpu-wa','cpu-st']).plot(alpha=0.5,figsize=(10,5))\n",
+    "fig.set_xlabel('Elapsed time (min)')\n",
     "fig.set_ylabel('CPU usage (%)')"
    ]
   },
@@ -377,9 +393,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "io_stat = pd.read_csv('summary-iostat.csv',parse_dates=[0])"
@@ -388,12 +402,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "io_stat['time'] = pd.to_timedelta(io_stat['time'])"
+    "io_stat['time'] = pd.to_timedelta(io_stat['time'])\n",
+    "io_stat['time_m'] = io_stat['time'] / timedelta(minutes=1)"
    ]
   },
   {
@@ -461,7 +474,7 @@
    "outputs": [],
    "source": [
     "for d in np.unique(mp_list):\n",
-    "    dev_rw = io_stat[io_stat['device'] == d].pivot_table(index=['time'],values=['rkB/s','wkB/s'],aggfunc=sum)\n",
+    "    dev_rw = io_stat[io_stat['device'] == d].pivot_table(index=['time_m'],values=['rkB/s','wkB/s'],aggfunc=sum)\n",
     "    dev_rw_sum = dev_rw[:].sum()\n",
     "    if dev_rw_sum['rkB/s'] == 0 and dev_rw_sum['wkB/s'] == 0:\n",
     "        continue\n",
@@ -469,6 +482,7 @@
     "    fig = dev_rw.plot(alpha=0.5,figsize=(10,5))\n",
     "    dev_rw.rolling(window=12,center=True).mean().plot(ax=fig)\n",
     "    fig.set_title('device='+d)\n",
+    "    fig.set_xlabel('Elapsed time (min)')\n",
     "    fig.set_ylabel('kB/s')\n",
     "    fig.legend(['rkB/s','wkB/s','SMA rkB/s','SMA wkB/s'])"
    ]
@@ -497,7 +511,7 @@
    "outputs": [],
    "source": [
     "for d in np.unique(mp_list):\n",
-    "    dev_util = io_stat[io_stat['device'] == d].pivot_table(index=['time'],values=['%util'],aggfunc=sum)\n",
+    "    dev_util = io_stat[io_stat['device'] == d].pivot_table(index=['time_m'],values=['%util'],aggfunc=sum)\n",
     "    dev_util_sum = dev_util[:].sum()\n",
     "    if dev_util_sum['%util'] == 0:\n",
     "        continue\n",
@@ -505,6 +519,7 @@
     "    fig = dev_util.plot(alpha=0.5,figsize=(10,5))\n",
     "    dev_util.rolling(window=12,center=True).mean().plot(ax=fig)\n",
     "    fig.set_title('device='+d)\n",
+    "    fig.set_xlabel('Elapsed time (min)')\n",
     "    fig.set_ylabel('util (%)')\n",
     "    fig.legend(['%util','SMA %util'])"
    ]
@@ -531,9 +546,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "gpu_stat = None\n",
@@ -544,12 +557,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "gpu_stat['time'] = pd.to_timedelta(gpu_stat['time'])"
+    "gpu_stat['time'] = pd.to_timedelta(gpu_stat['time'])\n",
+    "gpu_stat['time_m'] = gpu_stat['time'] / timedelta(minutes=1)"
    ]
   },
   {
@@ -561,14 +573,16 @@
    "outputs": [],
    "source": [
     "if gpu_stat is not None:\n",
-    "    gpu_util = gpu_stat.pivot_table(index='time',values=['utilization.gpu [%]','utilization.memory [%]'],aggfunc=sum)\n",
+    "    gpu_util = gpu_stat.pivot_table(index='time_m',values=['utilization.gpu [%]','utilization.memory [%]'],aggfunc=sum)\n",
     "    fig = gpu_util.plot(alpha=0.5,figsize=(10,5))\n",
     "    gpu_util.rolling(window=10,center=True).mean().plot(ax=fig)\n",
+    "    fig.set_xlabel('Elapsed time (min)')\n",
     "    fig.set_ylabel('util (%)')\n",
     "    fig.legend(['gpu','gpu memory','SMA gpu','SMA gpu memory'])\n",
     "    \n",
-    "    gpu_util_each = gpu_stat.pivot_table(index=['time'],columns=['index'],values=['utilization.gpu [%]','utilization.memory [%]']).fillna(0.0)\n",
+    "    gpu_util_each = gpu_stat.pivot_table(index=['time_m'],columns=['index'],values=['utilization.gpu [%]','utilization.memory [%]']).fillna(0.0)\n",
     "    fig = gpu_util_each.plot(alpha=0.5,figsize=(10,5))\n",
+    "    fig.set_xlabel('Elapsed time (min)')\n",
     "    fig.set_ylabel('util (%)')"
    ]
   },
@@ -615,9 +629,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -638,7 +650,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
