added code to decide concurrency size in normalization (CPU ver.) automatically

--- a/tests/perf-profile/perf-measurement-template.ipynb
+++ b/tests/perf-profile/perf-measurement-template.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Performance measurement in ExSeqProcessing (ver.1.7)"
+    "# Performance measurement in ExSeqProcessing (ver.1.7.1)"
    ]
   },
   {
@@ -117,7 +117,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "fig = proc_stat.pivot_table(index='elapsed_time_m',columns=['proc'],values=['res'],aggfunc=sum).plot(figsize=(10,5))\n",
@@ -131,9 +133,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "expected_memory_usage_line = False\n",
+    "if expected_memory_usage_line:\n",
+    "    proc_stat['expected memory usage'] = 8310.9\n",
+    "    proc_stat.loc[proc_stat['elapsed_time_m']>2.5,'expected memory usage'] = 1738.9"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "tbl = proc_stat[proc_stat['proc'] == 'worker'].pivot_table(index='elapsed_time_m',columns=['pid'],values=['res'],aggfunc=sum)\n",
     "tbl[tbl.isna()] = 0\n",
     "fig = tbl.plot(figsize=(10,5))\n",
+    "\n",
+    "if expected_memory_usage_line:\n",
+    "    proc_stat.plot(x='elapsed_time_m',y='expected memory usage',style=':',ax=fig)\n",
+    "\n",
     "fig.set_xlabel('Elapsed time (min)')\n",
     "fig.set_ylabel('Memory usage (MiB)')\n",
     "fig.legend(loc='upper left',bbox_to_anchor=(1.02,0.5,0.5,0.5),ncol=2,borderaxespad=0.1)"
