usability improvements: - implemented additional parameters setting in runPipeline.sh - made 'reportingDir' related to 'logDir' in configuration - added error handling for uninstalled commands in perf-profiles

--- a/tests/perf-profile/perf-measurement-template.ipynb
+++ b/tests/perf-profile/perf-measurement-template.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Performance measurement in ExSeqProcessing (ver.1.7.1)"
+    "# Performance measurement in ExSeqProcessing (ver.1.7.2)"
    ]
   },
   {
@@ -252,17 +252,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nfs_stat = pd.read_csv('summary-nfsiostat.csv',parse_dates=[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nfs_stat['time'] = pd.to_timedelta(nfs_stat['time'])\n",
-    "nfs_stat['time_m'] = nfs_stat['time'] / timedelta(minutes=1)"
+    "try:\n",
+    "    nfs_stat = pd.read_csv('summary-nfsiostat.csv',parse_dates=[0])\n",
+    "    nfs_stat['time'] = pd.to_timedelta(nfs_stat['time'])\n",
+    "    nfs_stat['time_m'] = nfs_stat['time'] / timedelta(minutes=1)\n",
+    "except:\n",
+    "    print('WARNING: command \"nfsiostat\" cannot be used.')"
    ]
   },
   {
@@ -280,9 +275,12 @@
    },
    "outputs": [],
    "source": [
-    "fig = nfs_stat[nfs_stat['fs-path']=='/mp/nas1'].pivot_table(index='time_m',values=['read-kb/s','write-kb/s']).plot(alpha=0.5,figsize=(10,5))\n",
-    "fig.set_xlabel('Elapsed time (min)')\n",
-    "fig.set_ylabel('read/write (kb/s)')"
+    "try:\n",
+    "    fig = nfs_stat[nfs_stat['fs-path']=='/mp/nas1'].pivot_table(index='time_m',values=['read-kb/s','write-kb/s']).plot(alpha=0.5,figsize=(10,5))\n",
+    "    fig.set_xlabel('Elapsed time (min)')\n",
+    "    fig.set_ylabel('read/write (kb/s)')\n",
+    "except:\n",
+    "    print('WARNING: command \"nfsiostat\" cannot be used.')"
    ]
   },
   {
@@ -291,7 +289,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nfs_stat[nfs_stat['fs-path']=='/mp/nas1'].pivot_table(index='time',values=['read-kb/s','write-kb/s'],aggfunc=sum).describe()"
+    "try:\n",
+    "    dsc = nfs_stat[nfs_stat['fs-path']=='/mp/nas1'].pivot_table(index='time',values=['read-kb/s','write-kb/s'],aggfunc=sum).describe()\n",
+    "except:\n",
+    "    dsc = None\n",
+    "    print('WARNING: command \"nfsiostat\" cannot be used.')\n",
+    "dsc"
    ]
   },
   {
@@ -307,9 +310,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = nfs_stat[nfs_stat['fs-path']=='/mp/nas1'].pivot_table(index='time_m',values=['pages-in-readpages','pages-in-writepages']).plot(alpha=0.5,figsize=(10,5))\n",
-    "fig.set_xlabel('Elapsed time (min)')\n",
-    "fig.set_ylabel('pages')"
+    "try:\n",
+    "    fig = nfs_stat[nfs_stat['fs-path']=='/mp/nas1'].pivot_table(index='time_m',values=['pages-in-readpages','pages-in-writepages']).plot(alpha=0.5,figsize=(10,5))\n",
+    "    fig.set_xlabel('Elapsed time (min)')\n",
+    "    fig.set_ylabel('pages')\n",
+    "except:\n",
+    "    print('WARNING: command \"nfsiostat\" cannot be used.')"
    ]
   },
   {
@@ -414,7 +420,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "io_stat = pd.read_csv('summary-iostat.csv',parse_dates=[0])"
+    "try:\n",
+    "    io_stat = pd.read_csv('summary-iostat.csv',parse_dates=[0])\n",
+    "    io_stat['time'] = pd.to_timedelta(io_stat['time'])\n",
+    "    io_stat['time_m'] = io_stat['time'] / timedelta(minutes=1)\n",
+    "except:\n",
+    "    print('WARNING: command \"iostat\" cannot be used.')"
    ]
   },
   {
@@ -423,36 +434,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "io_stat['time'] = pd.to_timedelta(io_stat['time'])\n",
-    "io_stat['time_m'] = io_stat['time'] / timedelta(minutes=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "comp_disk = re.compile('^([a-z][^ ]*) .* disk')\n",
-    "comp_dir = re.compile('(/mp/.*)$')\n",
+    "try:\n",
+    "    comp_disk = re.compile('^([a-z][^ ]*) .* disk')\n",
+    "    comp_dir = re.compile('(/mp/.*)$')\n",
     "\n",
-    "dev_dir_map = {}\n",
-    "for line in open('lsblk.txt'):\n",
-    "    line = line.rstrip()\n",
-    "    if line.startswith('NAME'):\n",
-    "        continue\n",
-    "#    print(line)\n",
-    "    \n",
-    "    m = comp_disk.search(line)\n",
-    "    if m != None:\n",
-    "        dev_name = m.group(1)\n",
-    "#        print(dev_name)\n",
-    "        continue\n",
-    "        \n",
-    "    m = comp_dir.search(line)\n",
-    "    if m != None:\n",
-    "        dir_name = m.group(1)\n",
-    "        dev_dir_map[dev_name] = dir_name"
+    "    dev_dir_map = {}\n",
+    "    try:\n",
+    "        for line in open('lsblk.txt'):\n",
+    "            line = line.rstrip()\n",
+    "            if line.startswith('NAME'):\n",
+    "                continue\n",
+    "        #    print(line)\n",
+    "\n",
+    "            m = comp_disk.search(line)\n",
+    "            if m != None:\n",
+    "                dev_name = m.group(1)\n",
+    "        #        print(dev_name)\n",
+    "                continue\n",
+    "\n",
+    "            m = comp_dir.search(line)\n",
+    "            if m != None:\n",
+    "                dir_name = m.group(1)\n",
+    "                dev_dir_map[dev_name] = dir_name\n",
+    "    except:\n",
+    "        print('WARNING: command \"lsblk\" cannot be used.')\n",
+    "except:\n",
+    "    print('WARNING: command \"iostat\" cannot be used.')"
    ]
   },
   {
@@ -463,19 +470,15 @@
    },
    "outputs": [],
    "source": [
-    "dev_list = io_stat[~io_stat['device'].str.contains('dm-')]['device'].unique()\n",
-    "mp_list = [dev_dir_map[str] if str in dev_dir_map else str for str in dev_list]\n",
-    "dev_mp_map = dict(zip(dev_list,mp_list))\n",
-    "print(dev_mp_map)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "io_stat['device'].replace(dev_mp_map,inplace=True)"
+    "try:\n",
+    "    dev_list = io_stat[~io_stat['device'].str.contains('dm-')]['device'].unique()\n",
+    "    mp_list = [dev_dir_map[str] if str in dev_dir_map else str for str in dev_list]\n",
+    "    dev_mp_map = dict(zip(dev_list,mp_list))\n",
+    "\n",
+    "    io_stat['device'].replace(dev_mp_map,inplace=True)\n",
+    "    print(dev_mp_map)\n",
+    "except:\n",
+    "    print('WARNING: command \"iostat\" cannot be used.')"
    ]
   },
   {
@@ -491,18 +494,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for d in np.unique(mp_list):\n",
-    "    dev_rw = io_stat[io_stat['device'] == d].pivot_table(index=['time_m'],values=['rkB/s','wkB/s'],aggfunc=sum)\n",
-    "    dev_rw_sum = dev_rw[:].sum()\n",
-    "    if dev_rw_sum['rkB/s'] == 0 and dev_rw_sum['wkB/s'] == 0:\n",
-    "        continue\n",
+    "try:\n",
+    "    for d in np.unique(mp_list):\n",
+    "        dev_rw = io_stat[io_stat['device'] == d].pivot_table(index=['time_m'],values=['rkB/s','wkB/s'],aggfunc=sum)\n",
+    "        dev_rw_sum = dev_rw[:].sum()\n",
+    "        if dev_rw_sum['rkB/s'] == 0 and dev_rw_sum['wkB/s'] == 0:\n",
+    "            continue\n",
     "\n",
-    "    fig = dev_rw.plot(alpha=0.5,figsize=(10,5))\n",
-    "    dev_rw.rolling(window=12,center=True).mean().plot(ax=fig)\n",
-    "    fig.set_title('device='+d)\n",
-    "    fig.set_xlabel('Elapsed time (min)')\n",
-    "    fig.set_ylabel('kB/s')\n",
-    "    fig.legend(['rkB/s','wkB/s','SMA rkB/s','SMA wkB/s'])"
+    "        fig = dev_rw.plot(alpha=0.5,figsize=(10,5))\n",
+    "        dev_rw.rolling(window=12,center=True).mean().plot(ax=fig)\n",
+    "        fig.set_title('device='+d)\n",
+    "        fig.set_xlabel('Elapsed time (min)')\n",
+    "        fig.set_ylabel('kB/s')\n",
+    "        fig.legend(['rkB/s','wkB/s','SMA rkB/s','SMA wkB/s'])\n",
+    "except:\n",
+    "    print('WARNING: command \"iostat\" cannot be used.')"
    ]
   },
   {
@@ -511,8 +517,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dev_rw = io_stat[io_stat['device'].isin(mp_list)].pivot_table(index=['time'],columns=['device'],values=['rkB/s','wkB/s'],aggfunc=sum)\n",
-    "dev_rw.describe()"
+    "try:\n",
+    "    dev_rw = io_stat[io_stat['device'].isin(mp_list)].pivot_table(index=['time'],columns=['device'],values=['rkB/s','wkB/s'],aggfunc=sum)\n",
+    "    dsc = dev_rw.describe()\n",
+    "except:\n",
+    "    dsc = None\n",
+    "    print('WARNING: command \"iostat\" cannot be used.')\n",
+    "    \n",
+    "dsc"
    ]
   },
   {
@@ -528,18 +540,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for d in np.unique(mp_list):\n",
-    "    dev_util = io_stat[io_stat['device'] == d].pivot_table(index=['time_m'],values=['%util'],aggfunc=sum)\n",
-    "    dev_util_sum = dev_util[:].sum()\n",
-    "    if dev_util_sum['%util'] == 0:\n",
-    "        continue\n",
+    "try:\n",
+    "    for d in np.unique(mp_list):\n",
+    "        dev_util = io_stat[io_stat['device'] == d].pivot_table(index=['time_m'],values=['%util'],aggfunc=sum)\n",
+    "        dev_util_sum = dev_util[:].sum()\n",
+    "        if dev_util_sum['%util'] == 0:\n",
+    "            continue\n",
     "\n",
-    "    fig = dev_util.plot(alpha=0.5,figsize=(10,5))\n",
-    "    dev_util.rolling(window=12,center=True).mean().plot(ax=fig)\n",
-    "    fig.set_title('device='+d)\n",
-    "    fig.set_xlabel('Elapsed time (min)')\n",
-    "    fig.set_ylabel('util (%)')\n",
-    "    fig.legend(['%util','SMA %util'])"
+    "        fig = dev_util.plot(alpha=0.5,figsize=(10,5))\n",
+    "        dev_util.rolling(window=12,center=True).mean().plot(ax=fig)\n",
+    "        fig.set_title('device='+d)\n",
+    "        fig.set_xlabel('Elapsed time (min)')\n",
+    "        fig.set_ylabel('util (%)')\n",
+    "        fig.legend(['%util','SMA %util'])\n",
+    "except:\n",
+    "    print('WARNING: command \"iostat\" cannot be used.')"
    ]
   },
   {
@@ -548,8 +563,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dev_util = io_stat[io_stat['device'].isin(mp_list)].pivot_table(index=['time'],columns=['device'],values=['%util'],aggfunc=sum)\n",
-    "dev_util.describe()"
+    "try:\n",
+    "    dev_util = io_stat[io_stat['device'].isin(mp_list)].pivot_table(index=['time'],columns=['device'],values=['%util'],aggfunc=sum)\n",
+    "    dsc = dev_util.describe()\n",
+    "except:\n",
+    "    dsc = None\n",
+    "    print('WARNING: command \"iostat\" cannot be used.')\n",
+    "    \n",
+    "dsc"
    ]
   },
   {
@@ -567,19 +588,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gpu_stat = None\n",
-    "if os.path.exists('summary-gpu.csv'):\n",
-    "    gpu_stat = pd.read_csv('summary-gpu.csv',parse_dates=[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gpu_stat['time'] = pd.to_timedelta(gpu_stat['time'])\n",
-    "gpu_stat['time_m'] = gpu_stat['time'] / timedelta(minutes=1)"
+    "try:\n",
+    "    gpu_stat = pd.read_csv('summary-gpu.csv',parse_dates=[0])\n",
+    "    gpu_stat['time'] = pd.to_timedelta(gpu_stat['time'])\n",
+    "    gpu_stat['time_m'] = gpu_stat['time'] / timedelta(minutes=1)\n",
+    "except:\n",
+    "    print('WARNING: command \"nvidia-smi\" cannot be used.')"
    ]
   },
   {
@@ -590,7 +604,7 @@
    },
    "outputs": [],
    "source": [
-    "if gpu_stat is not None:\n",
+    "try:\n",
     "    gpu_util = gpu_stat.pivot_table(index='time_m',values=['utilization.gpu [%]','utilization.memory [%]'],aggfunc=sum)\n",
     "    fig = gpu_util.plot(alpha=0.5,figsize=(10,5))\n",
     "    gpu_util.rolling(window=10,center=True).mean().plot(ax=fig)\n",
@@ -601,7 +615,9 @@
     "    gpu_util_each = gpu_stat.pivot_table(index=['time_m'],columns=['index'],values=['utilization.gpu [%]','utilization.memory [%]']).fillna(0.0)\n",
     "    fig = gpu_util_each.plot(alpha=0.5,figsize=(10,5))\n",
     "    fig.set_xlabel('Elapsed time (min)')\n",
-    "    fig.set_ylabel('util (%)')"
+    "    fig.set_ylabel('util (%)')\n",
+    "except:\n",
+    "    print('WARNING: command \"nvidia-smi\" cannot be used.')"
    ]
   },
   {
@@ -610,9 +626,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if gpu_stat is not None:\n",
+    "try:\n",
     "    gpu_util = gpu_stat.pivot_table(index='time',values=['utilization.gpu [%]','utilization.memory [%]'],aggfunc=sum)\n",
-    "    display(gpu_util.describe())"
+    "    dsc = display(gpu_util.describe())\n",
+    "except:\n",
+    "    dsc = None\n",
+    "    print('WARNING: command \"nvidia-smi\" cannot be used.')\n",
+    "    \n",
+    "dsc"
    ]
   },
   {
@@ -632,16 +653,22 @@
    "source": [
     "ds1 = proc_stat.pivot_table(index='elapsed_time',values=['cpu','mem'],aggfunc=sum).describe()\n",
     "\n",
-    "if gpu_stat is not None:\n",
+    "try:\n",
     "    ds2 = gpu_stat.pivot_table(index='time',values=['utilization.gpu [%]'],aggfunc=sum).describe()\n",
     "    ds = pd.concat([ds1, ds2],axis=1)\n",
-    "\n",
-    "print(ds.loc[['mean','max'],['mem','cpu','utilization.gpu [%]']])\n",
-    "print(' ')\n",
+    "    print(ds.loc[['mean','max'],['mem','cpu','utilization.gpu [%]']])\n",
+    "except:\n",
+    "    ds = ds1\n",
+    "    print(ds.loc[['mean','max'],['mem','cpu']])\n",
     "    \n",
-    "dev_ds = io_stat[io_stat['device'].isin(mp_list)].pivot_table(index=['time'],columns=['device'],values=['rkB/s','wkB/s','%util'],aggfunc=sum).describe()\n",
-    "print(dev_ds.loc[['mean','max'],['rkB/s','wkB/s']])\n",
-    "print(dev_ds.loc[['mean','max'],['%util']])"
+    "print(' ')\n",
+    "\n",
+    "try:\n",
+    "    dev_ds = io_stat[io_stat['device'].isin(mp_list)].pivot_table(index=['time'],columns=['device'],values=['rkB/s','wkB/s','%util'],aggfunc=sum).describe()\n",
+    "    print(dev_ds.loc[['mean','max'],['rkB/s','wkB/s']])\n",
+    "    print(dev_ds.loc[['mean','max'],['%util']])\n",
+    "except:\n",
+    "    pass"
    ]
   },
   {
